paragraph add in the project page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 
  <section class="Third-section" id="project-page">
+      <p>projects</p>
       <div class="project-01"> 
         <img class="project-image" src="/images/pro-4.jpg ">  
         <h3 class="h3">project-one</h3>
