--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
   <nav class = "navbar">
    
-    <div class="logo">Logo</div>
+    <div class="logo">PORTFOLIO.</div>
     <ul class="ul" id="ul">
       <li class="li"><a href = "#home-page">Home</a></li>
       <li class="li"><a href = "#about-me">About</a></li>
       <li class="li"><a href = "#project-page">Projects</a></li>
       <li class="li"><a href = "#contact-me">Contact</a></li>
     </ul>
-    <button class="menu" id="menu"><svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="24" height="24" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/></svg></button>
  </nav>  
 
   <section class = "first-page" id="home-page">     
@@ -53,6 +52,7 @@
         <li style="font-size: 25px;">Bootstrap</li>
         <li style="font-size: 25px;">React js</li>
         <li style="font-size: 25px;">PHP</li>
+        <li style="font-size: 25px;">MYSQL</li>
       </ul>
    </div>
    <div class="about-image-container">
@@ -62,38 +62,40 @@
 
 
  <section class="Third-section" id="project-page">
-      <p>projects</p>
-      <div class="project-01"> 
-        <img class="project-image" src="/images/pro-4.jpg ">  
-        <h3 class="h3">project-one</h3>
-        <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
-        <br>
-        <hr>
-        <P class="subtext"><a class="view" href="https://github.com/Tesfahun03">view here</a></P>
-       </div>
-      <div class="project-01"> <img class="project-image" src="/images/pro1.png ">  
-       <h3 class="h3">project-two</h3>
-       <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
-       <br>
-       <hr>
-       <P class="subtext"><a class="view" href="https://github.com/Tesfahun03">view here</a></P>
-     </div>
-     <div class="project-01">
-       <img class="project-image" src="/images/pro-3.jpg ">  
-       <h3 class="h3">project-three</h3>
-       <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
-       <br>
-       <hr>
-       <P class="subtext"><a class="view" href="https://github.com/Tesfahun03">view here</a></P>
+      <h1 id="projects">Projects</h1>
+      <div class="project-page-area">
+          <div class="project-01"> 
+            <img class="project-image" src="/images/pro-4.jpg ">  
+            <h3 class="h3">project-one</h3>
+            <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
+            <br>
+            <hr>
+            <P class="subtext"><a class="view" href="https://github.com/Tesfahun03">view here</a></P>
+          </div>
+          <div class="project-01"> <img class="project-image" src="/images/pro1.png ">  
+          <h3 class="h3">project-two</h3>
+          <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
+          <br>
+          <hr>
+          <P class="subtext"><a class="view" href="https://github.com/Tesfahun03">view here</a></P>
+        </div>
+        <div class="project-01">
+          <img class="project-image" src="/images/pro-3.jpg ">  
+          <h3 class="h3">project-three</h3>
+          <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
+          <br>
+          <hr>
+          <P class="subtext"><a class="view" href="https://github.com/Tesfahun03">view here</a></P>
+        </div>
+          <div class="project-01"> 
+          <img class="project-image" src="/images/food.jpg ">  
+          <h3 class="h3">project-four</h3>
+          <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
+          <br>
+          <hr>
+          <P class="subtext"><a  class="view" href="https://github.com/Tesfahun03">view here</a></P>  
+        </div>
     </div>
-      <div class="project-01"> 
-       <img class="project-image" src="/images/food.jpg ">  
-       <h3 class="h3">project-four</h3>
-       <p class=" subtext">This is my first project and some text about it.I enjoyed making this project.</p>
-       <br>
-       <hr>
-       <P class="subtext"><a  class="view" href="https://github.com/Tesfahun03">view here</a></P>  
-     </div>
 </section>
 
  <footer id="contact-me">
