--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </ul>
    </div>
    <div class="about-image-container">
-     <img class="my-image" src="/images/myimage.jpg" >
+     <img src="/images/myimage.jpg" class="my-image">
    </div>
  </section>
 
